<resources>
    <string name="app_name">box</string>
    <string name="game_over_msg">Game Over</string>
    <string name="ok">OK</string>
    <string name="start_single_player_game">Start Single Player Game</string>
    <string name="start_pvp">Start PvP</string>
    <string name="profile">Profile</string>
    <string name="high_scores">High Scores</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>
    <string name="difficlty_level">Difficulty Level</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="enter_name_prompt">Enter your name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="run_as_server">Run as server</string>
    <string name="connect_to_server">Connect to server</string>
</resources>