<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScoresActivity">

    <TextView
        android:id="@+id/high_scores_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/high_scores"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/high_scores_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_scores_title">

        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/light_blue_600" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/score"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/light_blue_600" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/light_blue_600" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/high_scores_header">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/score_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <Button
        android:id="@+id/score_ok_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_view" />

</androidx.constraintlayout.widget.ConstraintLayout>